# gpu-colcheck-py

./: CMakeLists.txt  LICENSE  README.md  setup.py
rs007l/: RS007L_J0.binvox  RS007L_J1.binvox  RS007L_J2.binvox  RS007L_J3.binvox  RS007L_J4.binvox  RS007L_J5.binvox  RS007L_J6.binvox  robotiq_arg2f_140_inner_finger.binvox  robotiq_arg2f_140_inner_knuckle.binvox  robotiq_arg2f_140_outer_finger.binvox  robotiq_arg2f_140_outer_knuckle.binvox  robotiq_arg2f_base_link.binvox  robotiq_arg2f_coupling.binvox  rs007l_full.urdf  rs007l_full_left.urdf  rs007l_full_right.urdf  rs007l_gripper_full_left.urdf  rs007l_gripper_full_right.urdf
src/: collision_checker.cpp
tests/: test_basic.py
